[package]
name = "iski-gpx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo-types = "0.7.12"
gpx = "0.10.0"
serde = "1.0.196"
serde_json = "1.0.113"
time = { version = "0.3.34", features = ["std"] }
